Registro de venta con todas sus validaciones y actualización de cupos

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,10 +83,10 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="170dp"
+                android:layout_height="71dp"
                 android:text="ACEPTAR"
-                android:onClick="irPaginaInicioPruebas"/>
+                android:onClick="ingresar"/>
 
         </TableRow>
     </TableLayout>
