--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -27,4 +27,14 @@
         android:orderInCategory="100"
         android:title="Historial envio ventas"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/opcion_cambiar_clave"
+        android:orderInCategory="100"
+        android:title="Cambiar clave"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/cerrar_sesion"
+        android:orderInCategory="100"
+        android:title="Cerrar sesión"
+        app:showAsAction="never" />
 </menu>
