--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tvRegistrarse"
@@ -30,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
-        android:padding="10dp">
+        android:padding="15dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -62,13 +63,18 @@
                 android:text="Clave: "
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
-            <EditText
-                android:id="@+id/etClave"
-                android:layout_width="wrap_content"
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etClave"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+            </android.support.design.widget.TextInputLayout>
 
         </TableRow>
 
@@ -82,6 +88,7 @@
                 android:layout_height="wrap_content" />
 
             <Button
+                android:layout_marginTop="15dp"
                 android:id="@+id/button"
                 android:layout_width="170dp"
                 android:layout_height="71dp"
