--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
+    android:padding="15dp"
     android:orientation="vertical">
 
     <TableLayout
@@ -61,7 +61,7 @@
                 android:id="@+id/etRuc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="13"
+                android:ems="8"
                 android:inputType="number"
                 android:textAppearance="@android:style/TextAppearance.Large"/>
 
@@ -85,8 +85,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="71dp"
         android:layout_gravity="right"
         android:onClick="buscarDistribuidores"
         android:text="BUSCAR"
