--- a/app/src/main/res/layout/fragment_consultar_venta.xml
+++ b/app/src/main/res/layout/fragment_consultar_venta.xml
@@ -4,22 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ConsultarVentaFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/title_fragment_consulta_venta"
-                android:textAppearance="@android:style/TextAppearance.Medium"/>
-        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
@@ -49,9 +39,10 @@
                 android:layout_height="wrap_content"/>
 
             <Button
+                android:layout_marginTop="15dp"
                 android:id="@+id/btnBuscarVentas"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="71dp"
                 android:text="BUSCAR" />
         </TableRow>
 
