Consumo del web service de registro de ventas

--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -23,7 +23,7 @@
         android:title="Actualizar cupos"
         app:showAsAction="never" />
     <item
-        android:id="@+id/opcion_historial"
+        android:id="@+id/opcion_historial_ventas"
         android:orderInCategory="100"
         android:title="Historial envio ventas"
         app:showAsAction="never" />
