--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,18 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="botones">
+        <item name="android:layout_height">@dimen/altoBoton</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
+
+    <style name="pie">
+        <item name="android:layout_height">@dimen/altoPie</item>
+    </style>
+
+    <style name="altoscroll">
+        <item name="android:layout_height">@dimen/altoScroll</item>
+    </style>
+
 </resources>
