--- a/app/src/main/res/layout/fragment_editar_venta.xml
+++ b/app/src/main/res/layout/fragment_editar_venta.xml
@@ -84,6 +84,21 @@
                 android:textAppearance="@android:style/TextAppearance.Medium"/>
         </TableRow>
 
+        <TableRow>
+
+            <TextView
+                android:id="@+id/textView40"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cupo disponible: " />
+
+            <TextView
+                android:id="@+id/cupoDisponible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium" />
+        </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
