--- a/app/src/main/res/layout/fragment_editar_venta.xml
+++ b/app/src/main/res/layout/fragment_editar_venta.xml
@@ -93,7 +93,7 @@
                 android:text="Cupo disponible: " />
 
             <TextView
-                android:id="@+id/cupoDisponible"
+                android:id="@+id/tvCupoDisponibleSelecionada"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Medium" />
