Escaneo venta corrección

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginRight="90dp"
         android:padding="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <TextView
         android:id="@+id/tvSalirLogin"
@@ -24,7 +24,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginRight="20dp"
         android:padding="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
 
     <TableLayout
@@ -49,6 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:inputType="textCapCharacters"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         </TableRow>
 
@@ -80,20 +81,19 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
             <Button
-                android:layout_marginTop="15dp"
                 android:id="@+id/button"
                 android:layout_width="170dp"
                 android:layout_height="71dp"
-                android:text="ACEPTAR"
-                android:onClick="ingresar"/>
+                android:layout_marginTop="15dp"
+                android:onClick="ingresar"
+                android:text="ACEPTAR" />
 
         </TableRow>
 
@@ -112,10 +112,13 @@
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Olvidó su clave!" />
+                android:text="Olvidó su clave!"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
         </TableRow>
 
     </TableLayout>
+
+
 
     <FrameLayout
         android:layout_height="match_parent"
