--- a/app/src/main/res/layout/activity_recuperar_clave.xml
+++ b/app/src/main/res/layout/activity_recuperar_clave.xml
@@ -25,10 +25,12 @@
 
             <EditText
                 android:id="@+id/etUsuarioReseteo"
-                android:layout_width="wrap_content"
+                android:layout_width="233dp"
                 android:layout_height="wrap_content"
                 android:ems="8"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                android:hint="@string/hintUsuario"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="30sp" />
         </TableRow>
 
         <TableRow
