--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -34,7 +34,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Depósito GLP"
-                    android:textAppearance="@android:style/TextAppearance.Medium"/>
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textSize="30sp" />
 
                 <RadioButton
                     android:id="@+id/radioTransporteGlp"
@@ -42,7 +43,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Transporte GLP"
-                    android:textAppearance="@android:style/TextAppearance.Medium"/>
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textSize="30sp" />
             </RadioGroup>
         </TableRow>
 
@@ -62,8 +64,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="8"
+                android:hint="@string/hintIdentificacion"
                 android:inputType="number"
-                android:textAppearance="@android:style/TextAppearance.Large"/>
+                android:textAppearance="@android:style/TextAppearance.Large" />
 
         </TableRow>
 
