--- a/app/src/main/res/layout/fila_venta_pendiente_enviar.xml
+++ b/app/src/main/res/layout/fila_venta_pendiente_enviar.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/tvFechaVenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@android:style/TextAppearance.Medium" />
+                android:textAppearance="@android:style/TextAppearance.Small" />
         </TableRow>
 
         <TableRow
