--- a/app/src/main/res/layout/fila_historial_linear.xml
+++ b/app/src/main/res/layout/fila_historial_linear.xml
@@ -42,10 +42,23 @@
             <TextView
                 android:id="@+id/txtVNumeroRegistros"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="N° Registros: " />
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tvNumeroRegistro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/txtVNumeroCilindrosVendidos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="N° Cilindros: " />
+            <TextView
+                android:id="@+id/tvNumeroCilindroVendidos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Medium"/>
